force-app/main/default/objects/Business_Case__c/Business_Case__c.object-meta.xml
<CustomObject>
    <label>Business Case</label>
    <nameField>
        <displayFormat>BCN-{000000000}</displayFormat>
        <label>Business Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>