force-app/main/default/objects/Business_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>