force-app/main/default/objects/Business_Case__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostic Machine</label>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>