force-app/main/default/objects/Business_Case__c/fields/Bill_To_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Line_1__c</fullName>
    <formula>Machine_Installation__r.bill_to_account__r.AddressLine_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Address Line 1</label>
    <type>Text</type>
</CustomField>