force-app/main/default/objects/Business_Case__c/fields/Bill_To_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Line_2__c</fullName>
    <formula>Machine_Installation__r.bill_to_account__r.Addess_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Address Line 2</label>
    <type>Text</type>
</CustomField>