force-app/main/default/objects/Business_Case__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <formula>Machine_Installation__r.bill_to_account__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To City</label>
    <type>Text</type>
</CustomField>