force-app/main/default/objects/Business_Case__c/fields/Business_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>