force-app/main/default/objects/Business_Case__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Machine_Installation__r.bill_to_account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Customer Name</label>
    <type>Text</type>
</CustomField>