force-app/main/default/objects/Business_Case__c/fields/Customer_Namea__c.field-meta.xml
<CustomField>
    <fullName>Customer_Namea__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>