force-app/main/default/objects/Business_Case__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>Machine_Installation__r.bill_to_account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Customer Number</label>
    <type>Text</type>
</CustomField>