force-app/main/default/objects/Business_Case__c/fields/Customer_Numbera__c.field-meta.xml
<CustomField>
    <fullName>Customer_Numbera__c</fullName>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>