force-app/main/default/objects/Business_Case__c/fields/Hidden_field_BCase__c.field-meta.xml
<CustomField>
    <fullName>Hidden_field_BCase__c</fullName>
    <label>Hidden field BCase</label>
    <type>Date</type>
</CustomField>