force-app/main/default/objects/Business_Case__c/fields/Is_Master__c.field-meta.xml
<CustomField>
    <fullName>Is_Master__c</fullName>
    <formula>RecordType.Name = &apos;Master Business Case&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Master?</label>
    <type>Checkbox</type>
</CustomField>