force-app/main/default/objects/Business_Case__c/fields/Machine_Installation__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Installation</label>
    <referenceTo>Machine_Installation__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>