force-app/main/default/objects/Business_Case__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Name</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>