force-app/main/default/objects/Business_Case__c/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <formula>Machine_Name__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Type</label>
    <type>Text</type>
</CustomField>