force-app/main/default/objects/Business_Case__c/fields/Master_Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Master_Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Business Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Case__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>