force-app/main/default/objects/Business_Case__c/fields/Material_Descriptionsa__c.field-meta.xml
<CustomField>
    <fullName>Material_Descriptionsa__c</fullName>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>