force-app/main/default/objects/Business_Case__c/fields/Material_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Material_Numbers__c</fullName>
    <formula>Asset_Number__r.Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Numbers</label>
    <type>Text</type>
</CustomField>