force-app/main/default/objects/Business_Case__c/fields/Monthly_Reagent_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reagent_Commitment__c</fullName>
    <label>Monthly Reagent Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>