force-app/main/default/objects/Business_Case__c/fields/Payback_Period__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period__c</fullName>
    <label>Payback Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>