force-app/main/default/objects/Business_Case__c/fields/Sap_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Sap_Asset_Number__c</fullName>
    <formula>Asset_Number__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sap Asset Number</label>
    <type>Text</type>
</CustomField>