force-app/main/default/objects/Business_Case__c/fields/SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Number__c</fullName>
    <formula>Machine_Name__r.Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Material Number</label>
    <type>Text</type>
</CustomField>