force-app/main/default/objects/Business_Case__c/fields/Serial_Numbera__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbera__c</fullName>
    <formula>Machine_Installation__r.Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>