force-app/main/default/objects/Business_Case__c/fields/Ship_To_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Line_1__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.AddressLine_1__c</formula>
    <label>Ship To Address Line 1</label>
    <type>Text</type>
</CustomField>