force-app/main/default/objects/Business_Case__c/fields/Ship_To_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Line_2__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.Addess_Line_2__c</formula>
    <label>Ship To Address Line 2</label>
    <type>Text</type>
</CustomField>