force-app/main/default/objects/Business_Case__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.City__c</formula>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>