force-app/main/default/objects/Business_Case__c/fields/Ship_To_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Customer_Name__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Customer Name</label>
    <type>Text</type>
</CustomField>