force-app/main/default/objects/Business_Case__c/fields/Ship_To_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Customer_Number__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Customer Number</label>
    <type>Text</type>
</CustomField>