force-app/main/default/objects/Business_Case__c/fields/Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Postal_Code__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Postal Code</label>
    <type>Text</type>
</CustomField>