force-app/main/default/objects/Business_Case__c/fields/Ship_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Province__c</fullName>
    <formula>Asset_Number__r.Ship_To_Account__r.Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Province</label>
    <type>Text</type>
</CustomField>