force-app/main/default/objects/Business_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Active 1</fullName>
            </value>
            <value>
                <fullName>Revised Quetta</fullName>
            </value>
            <value>
                <fullName>Active / Completed</fullName>
            </value>
            <value>
                <fullName>Active / Closed</fullName>
            </value>
            <value>
                <fullName>Closed Quetta</fullName>
            </value>
            <value>
                <fullName>Closed 1</fullName>
            </value>
            <value>
                <fullName>New Active</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>