force-app/main/default/objects/Business_Case__c/fields/Sum_of_Monthly_Reagent_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Monthly_Reagent_Commitment__c</fullName>
    <label>Sum of Monthly Reagent Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>