force-app/main/default/objects/Business_Case__c/fields/Sum_of_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Unit_Cost__c</fullName>
    <label>Sum of Unit Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>