force-app/main/default/objects/Business_Case__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV - AlphaVenus</fullName>
            </value>
            <value>
                <fullName>A - Boule</fullName>
            </value>
            <value>
                <fullName>B - Boule</fullName>
            </value>
            <value>
                <fullName>DYM - Dymind</fullName>
            </value>
            <value>
                <fullName>ER - Erba</fullName>
            </value>
            <value>
                <fullName>RB - Erba</fullName>
            </value>
            <value>
                <fullName>HW - Headway</fullName>
            </value>
            <value>
                <fullName>NV - Nova</fullName>
            </value>
            <value>
                <fullName>OR - OCD</fullName>
            </value>
            <value>
                <fullName>STA - Stago</fullName>
            </value>
            <value>
                <fullName>CPART - VitalScientific</fullName>
            </value>
            <value>
                <fullName>D - VitalScientific</fullName>
            </value>
            <value>
                <fullName>E - VitalScientific</fullName>
            </value>
            <value>
                <fullName>LOC - VitalScientific</fullName>
            </value>
            <value>
                <fullName>DSERV - VitalScientific</fullName>
            </value>
            <value>
                <fullName>CSERV - VitalScientific</fullName>
            </value>
            <value>
                <fullName>PKG - VitalScientific</fullName>
            </value>
            <value>
                <fullName>INST - VitalScientific</fullName>
            </value>
            <value>
                <fullName>PART - VitalScientific</fullName>
            </value>
            <value>
                <fullName>DM - VitalScientific</fullName>
            </value>
            <value>
                <fullName>U - VitalScientific</fullName>
            </value>
            <value>
                <fullName>S - VitalScientific</fullName>
            </value>
            <value>
                <fullName>F - VitalScientific</fullName>
            </value>
            <value>
                <fullName>YHLO - YHLO</fullName>
            </value>
            <value>
                <fullName>ZYB - ZYBIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>