force-app/main/default/objects/Business_Case__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XRAY - Xray</fullName>
            </value>
            <value>
                <fullName>HM - Heamatology</fullName>
            </value>
            <value>
                <fullName>COAG - Coagulation</fullName>
            </value>
            <value>
                <fullName>ELCT - Electrolyte</fullName>
            </value>
            <value>
                <fullName>URIN - Urine</fullName>
            </value>
            <value>
                <fullName>UBT - Urea Breath Test</fullName>
            </value>
            <value>
                <fullName>ABG - Arterial Blood Gas</fullName>
            </value>
            <value>
                <fullName>POC - Point of Care</fullName>
            </value>
            <value>
                <fullName>IMA - Immunoassay</fullName>
            </value>
            <value>
                <fullName>CC - Clinical Chemistry</fullName>
            </value>
            <value>
                <fullName>ELT - Electrolyte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>