force-app/main/default/objects/Business_Case__c/fields/Technologya__c.field-meta.xml
<CustomField>
    <fullName>Technologya__c</fullName>
    <formula>Machine_Installation__r.Diagnostic_Machine__r.Technology__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology</label>
    <type>Text</type>
</CustomField>