force-app/main/default/objects/Business_Case__c/fields/Technologyaa__c.field-meta.xml
<CustomField>
    <fullName>Technologyaa__c</fullName>
    <label>Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>