force-app/main/default/objects/Business_Case__c/fields/Total_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Cost__c</fullName>
    <formula>Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>