force-app/main/default/objects/Business_Case__c/fields/Vendora__c.field-meta.xml
<CustomField>
    <fullName>Vendora__c</fullName>
    <formula>Machine_Installation__r.Diagnostic_Machine__r.Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>