force-app/main/default/objects/Business_Case__c/recordTypes/Individual_Business_Case.recordType-meta.xml
<RecordType>
    <fullName>Individual_Business_Case</fullName>
    <active>true</active>
    <label>Individual Business Case</label>
</RecordType>