force-app/main/default/objects/Business_Case__c/recordTypes/Master_Business_Case.recordType-meta.xml
<RecordType>
    <fullName>Master_Business_Case</fullName>
    <active>true</active>
    <label>Master Business Case</label>
</RecordType>