force-app/main/default/objects/Business_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Namea__c</columns>
    <columns>Customer_Numbera__c</columns>
    <columns>Status__c</columns>
    <columns>Quantity__c</columns>
    <columns>Vendor__c</columns>
    <columns>Technologyaa__c</columns>
    <columns>Sum_of_Unit_Cost__c</columns>
    <columns>Sum_of_Monthly_Reagent_Commitment__c</columns>
    <columns>Sales_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>