force-app/main/default/objects/Business_Case__c/listViews/Business_Case_Approvers_Business_Case.listView-meta.xml
<ListView>
    <fullName>Business_Case_Approvers_Business_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Case Approvers</label>
    <queue>Business_Case_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>