force-app/main/default/objects/Business_Case__c/listViews/Master_Business_Cases.listView-meta.xml
<ListView>
    <fullName>Master_Business_Cases</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Quantity__c</columns>
    <columns>Customer_Namea__c</columns>
    <columns>Customer_Numbera__c</columns>
    <columns>Material_Number__c</columns>
    <columns>Material_Descriptionsa__c</columns>
    <columns>Sum_of_Unit_Cost__c</columns>
    <columns>Sum_of_Monthly_Reagent_Commitment__c</columns>
    <columns>Agreement_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Business_Case__c.Master_Business_Case</value>
    </filters>
    <label>Master Business Cases</label>
</ListView>